# for-dev

./: README.md  about.peuf  about.yaml  data.yaml  gitignore  monorepo.bash  print-loc.bash
@-bout/: about.yaml  pyproject.toml
@-bout/changes/: TODO-FR.txt
@-bout/contribute/api/: README.md
@-bout/contribute/doc/: README.md
@-bout/doc/content/: fullspecs.yaml
@-bout/doc/content/fullspecs/: src2prod.yaml  toc.yaml
@-bout/readme/: about.md  prologue.md
CoFiUp/: about.yaml  pyproject.toml
CoFiUp/changes/: TODO-FR.txt
CoFiUp/changes/2023/: 01.txt  02.txt  04.txt
CoFiUp/contribute/api/: README.md
CoFiUp/contribute/api/changes/: TODO-FR.txt
CoFiUp/contribute/doc/: README.md
CoFiUp/contribute/doc/changes/: TODO-FR.txt
CoFiUp/doc/: main.txt
CoFiUp/doc/content/: intro.txt  setup.txt  via-cli.txt  via-python.txt
CoFiUp/doc/content/setup/: advice.txt  data.txt  fullspecs.txt  fullspecs.yaml  mixing.txt  textual.txt  update.txt  write-n-update.txt  write.txt
CoFiUp/readme/: about.md  prologue.md
CoFiUp/src/: __init__.py  __main__.py  cfpcli.py
CoFiUp/src/extract/: __init__.py  config.py
CoFiUp/tools/debug/: dbg_builder_fromfile.py
CoFiUp/tools/factory/: build_01_update_tests_from_doc.py
justcode/: about.peuf  pyproject.toml
justcode/__jscmeta__/: params.peuf
justcode/changes/2022/: 08.txt  09.txt  10.txt
justcode/contribute/api/: README.md
justcode/contribute/api/autoparam/: README.md
justcode/contribute/api/filter/: README.md
justcode/contribute/api/gitignore/: README.md
justcode/contribute/api/license/: README.md
justcode/contribute/api/template/: README.md
justcode/contribute/api/validator/: README.md
justcode/contribute/doc/: README.md
justcode/doc/: main.txt
justcode/doc/content/: api.txt  check-n-update.txt  cli.txt  contribute.txt  cookie-vs-justcode.txt  intro.txt  modularity.txt  split-n-reuse.txt  starting.txt  validate-n-update.txt
justcode/doc/content/check-n-update/: check.txt  no-check.txt  update.txt
justcode/doc/content/cli/: api.txt  create.txt  dev-tools.txt  help.txt  update.txt  validate.txt
justcode/doc/content/contribute/: api.txt  doc.txt  templates.txt
justcode/doc/content/modularity/: basic.txt  cookie-vs-justcode.txt  xxx copy 2.txt
justcode/doc/content/split-n-reuse/: api.txt  create-n-use.txt  create.txt  initiate.txt  motivate.txt  motivation.txt  remote.txt
justcode/doc/content/starting/: split-n-reuse.txt
justcode/doc/content/validate-n-update/: update.txt  validate.txt
justcode/readme/: about.md  last.md  prologue.md
justcode/src/: __main__.py
justcode/src/config/gitignore/: gitignore.py  metadatas.json
justcode/src/config/license/: license.py
justcode/src/config/template/: __init__.py
justcode/tools/factory/config/: build_01_update_gitignore.py  build_02_update_licenses.py  failed_licenses.json
spkpb/: README.md  about.peuf  about.yaml  pyproject.toml
spkpb/changes/: TODO-FR.txt
spkpb/changes/2021/: 08.txt
spkpb/changes/2022/: 02.txt
spkpb/readme/: about.md  about.peuf  about.yaml  basecom.md  default.md  hardway-all-outputs.md  hardway-one-output.md  hardway-onlyresume.md  hardway-timestamp.md  prologue.md  reset.md  silent.md  timestamp.md
spkpb/spkpb/: README.md  __init__.py  base.py  problems.py  timer.py
spkpb/spkpb/speaker/: __init__.py  allinone.py  log.py  spk_interface.py  term.py
spkpb/src/: base.py  problems.py  timer.py  tool_debug.py
spkpb/src/speaker/: allinone.py  log.py  spk_interface.py  term.py  tool_allinone.py  tool_spk_interface.py
spkpb/tools/debug/: basecom.py  no_output.py  not_silent.py  only_log.py  only_term.py  reset.py  reset_log.py  silent.py  silent_not.py  timelog.py
spkpb/tools_debug/: timelog.py
src2prod/: README.md  about.peuf  about.yaml  build-project.bash  pyproject.toml
src2prod/changes/: TODO-FR.txt
src2prod/changes/2021/: 08.txt  09.txt
src2prod/changes/2022/: 12.txt
src2prod/changes/2023/: 05.txt
src2prod/changes/2024/: 09.txt
src2prod/readme/: about.md  about.peuf  about.yaml  build.md  cli.md  example-used.md  only-files.md  prologue.md  readme-splitted.md
src2prod/readme/build-dist/: about.yaml  how-to.md  what-we-want.md
src2prod/readme/buildit/: about.yaml  how-to.md  main.md  what-we-want.md
src2prod/src/: __init__.py  __main__.py  baseproj.py  cli.py  cmdline.py  lowlevel.py  project.py  project_base.py
src2prod/src-OLD/: update.py
src2prod/src-OLD/toolbox/: __init__.py  base.py
src2prod/src/toolbox/: __init__.py  base.py  timer.py
src2prod/src2prod/: README.md  baseproj.py  cmdline.py  project.py
src2prod/src_OLD/: __main__.py  baseproj.py  cli.py  project.py
src2prod/tools/debug/: cmdline.py  lof.py  lof_1.py  lof_2.py  update.py  update_1.py  update_2.py  update_dev_1.py  update_dev_2.py  update_python_for_latex.py  user_settings.py
suaVER/: KEYWORDS.yaml  about.yaml  pyproject.toml
suaVER/changes/: TODO-FR.txt
suaVER/changes/2023/: 01.txt
suaVER/contribute/doc/: README.md
suaVER/doc/: main.txt
suaVER/doc/content/: auto-num.txt  intro.txt  set-up.txt  setup.txt  update.txt  via-cli.txt  via-python.txt  write.txt
suaVER/readme/: about.md  about.yaml
suaVER/src/: __main__.py  svrcli.py
suaver/: pyproject.toml
suaver/contribute/doc/: README.md
suaver/readme/: about.md  prologue.md
(+3320 files in other folders)
