[tool.poetry]
name        = "cofiup"
version     = ""
description = 'This project can update chunks of content from selected files using the powerful regexes.'
readme      = "README.md"
authors     = ["Christophe BAL"]
maintainers = ["Christophe BAL"]
license     = "GNU License Version 3"
repository  = "https://github.com/bc-tools/for-dev/tree/main/cofiup"

[tool.poetry.scripts]
cofiup = "cofiup.__main__:svr_CLI"

[tool.poetry.dependencies]
python = "^3.9"
click  = "^8.1.3"
tomli_w = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
