[tool.poetry]
name         = "inipro"
version      = ""
description  = 'XXX'
readme       = "README.md"
authors      = ["Christophe BAL"]
maintainers  = ["Christophe BAL"]
license      = "GNU License Version 3"
repository   = "https://github.com/bc-tools/for-dev/tree/main/inipro"

[tool.poetry.dependencies]
python  = "^3.8"
natsort = "^7.1.1"
orpyste = "^1.3.2-beta"

[tool.poetry.dev-dependencies]

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
