[tool.poetry]
name        = "src2prod"
version     = "0.0.0-beta"
description = 'This module allows to work within a source folder to develop projects but at the same time to publish the final product in another folder, this directory being a "thin" version of the source folder.'
readme      = "README.md"
authors     = ["Christophe BAL"]
license     = "GNU License Version 3"

[tool.poetry.dependencies]
python = "^3.8"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
