[tool.poetry]
name        = "suaver"
version     = ""
description = 'This project allows to indicate the version number of a project almost everywhere, but only once, while using it easily in different contents.'
readme      = "README.md"
authors     = ["Christophe BAL"]
maintainers = ["Christophe BAL"]
license     = "GNU License Version 3"
repository  = "https://github.com/bc-tools/for-dev/tree/main/suaver"

[tool.poetry.scripts]
suaver = "suaver.__main__:svr_CLI"

[tool.poetry.dependencies]
python           = "^3.9"
click            = "^8.1.3"
semantic-version = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
