[tool.poetry]
name         = "suaver"
version      = "0.0.0-beta"
description  = '???'
readme       = "README.md"
authors      = ["Christophe BAL"]
maintainers  = ["Christophe BAL"]
license      = "GNU License Version 3"
repository   = "https://github.com/bc-tools/for-dev/tree/main/suave"

[tool.poetry.dependencies]
python = "^3.9"
click  = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
