[tool.poetry]
name         = {name}
version      = {version}
description  = {desc}
readme       = {readme}
authors      = {authors}
maintainers  = {maintainers}
license      = {license}
repository   = {repository}

[tool.poetry.dependencies]
{deps}

[tool.poetry.dev-dependencies]
{dev_deps}

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
